# hyperspot

./: .codecov.yml  .cypilot-config.json  .dockerignore  .fdd-config.json  .gitattributes  .gitignore  .gitmodules  .spaider-config.json  .spider-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Clippy.toml  Makefile  NOTICE  README.md  SECURITY.md  best_practices.md  clippy.toml  cypilot-agents.json  deny.toml  dylint.toml  lychee.toml  pr-482-review.md  release-plz.toml  rustfmt.toml  spaider-agents.json  spider-agents.json
apps/cli/: Cargo.toml
apps/cli/src/: common.rs  main.rs
apps/gts-docs-validator/: Cargo.toml  README.md
apps/gts-docs-validator/src/: error.rs  main.rs  normalize.rs  scan_json.rs  scan_markdown.rs  scan_yaml.rs  scanner.rs  validator.rs
apps/hyperspot-server/: Cargo.toml  build.rs
apps/hyperspot-server/src/: main.rs  registered_modules.rs
apps/hyperspot-server/tests/: cli_smoke_tests.rs  migrate_command_tests.rs
dylint_lints/: AGENTS.md  Cargo.toml  PROMPT.md  README.md  test_ui.py  test_validate_gts_docs.py  validate_gts_docs.py
dylint_lints/.cargo/: config.toml
dylint_lints/contract_lints/: Cargo.toml
dylint_lints/contract_lints/src/: lib.rs  utils.rs
dylint_lints/contract_lints/ui/: Cargo.toml  README.md  bad_api_dto.rs  bad_contract.rs
dylint_lints/de0101_no_serde_in_contract/: Cargo.toml
dylint_lints/de0101_no_serde_in_contract/src/: lib.rs
dylint_lints/de01_contract_layer/de0101_no_serde_in_contract/: Cargo.toml
dylint_lints/de01_contract_layer/de0102_no_toschema_in_contract/: Cargo.toml
dylint_lints/de01_contract_layer/de0103_no_http_types_in_contract/: Cargo.toml
dylint_lints/de01_contract_layer/de0104_no_api_dto_in_contract/: Cargo.toml
dylint_lints/de01_contract_layer/de0110_no_schema_for_on_gts_structs/: Cargo.toml  rust-toolchain
dylint_lints/de02_api_layer/de0201_dtos_only_in_api_rest/: Cargo.toml  README.md
dylint_lints/de02_api_layer/de0202_dtos_not_referenced_outside_api/: Cargo.toml  README.md
dylint_lints/de02_api_layer/de0203_dtos_must_have_serde_derives/: Cargo.toml  README.md
dylint_lints/de02_api_layer/de0203_dtos_must_use_api_dto/: Cargo.toml  README.md
dylint_lints/de02_api_layer/de0204_dtos_must_have_toschema_derive/: Cargo.toml  README.md
dylint_lints/de03_domain_layer/de0301_no_infra_in_domain/: Cargo.toml  README.md
dylint_lints/de03_domain_layer/de0305_no_panics_in_domain/: Cargo.toml
dylint_lints/de03_domain_layer/de0308_no_http_in_domain/: Cargo.toml  README.md
dylint_lints/de03_domain_layer/de0309_must_have_domain_model/: README.md
dylint_lints/de04_infrastructure/de0407_no_hardcoded_connection_strings/: Cargo.toml  README.md
dylint_lints/de04_infrastructure/de0409_no_secrets_in_migrations/: Cargo.toml  README.md
dylint_lints/de05_client_layer/de0503_plugin_client_suffix/: Cargo.toml  README.md
dylint_lints/de05_client_layer/de0504_client_versioning/: Cargo.toml
dylint_lints/de07_security/de0701_no_unwrap/: Cargo.toml
dylint_lints/de07_security/de0702_no_expect/: Cargo.toml
dylint_lints/de07_security/de0703_no_hardcoded_secrets/: Cargo.toml  README.md
dylint_lints/de07_security/de0705_no_prebuild_sql_queries/: Cargo.toml  README.md
dylint_lints/de07_security/de0705_no_sql_injection/: Cargo.toml
dylint_lints/de07_security/de0706_no_direct_sqlx/: Cargo.toml  README.md
dylint_lints/de08_rest_api_conventions/de0801_api_endpoint_version/: Cargo.toml
dylint_lints/de08_rest_api_conventions/de0802_use_odata_ext/: Cargo.toml
dylint_lints/de08_rest_api_conventions/de0803_api_snake_case/: Cargo.toml  README.md
dylint_lints/de09_gts_layer/de0901_gts_string_pattern/: Cargo.toml  README.md
dylint_lints/de09_gts_layer/de0902_no_schema_for_on_gts_structs/: Cargo.toml
dylint_lints/de11_documentation/de1107_public_apis_doc_comments/: Cargo.toml  README.md
dylint_lints/de12_config_layer/de12_enforce_humantime_serde/: Cargo.toml  README.md
dylint_lints/de13_common_patterns/de1301_no_print_macros/: Cargo.toml  README.md
dylint_lints/lint_utils/: Cargo.toml
dylint_lints/lint_utils/src/: lib.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_html_parser.rs  fuzz_json_config.rs  fuzz_markdown_parser.rs  fuzz_odata_cursor.rs  fuzz_odata_filter.rs  fuzz_odata_orderby.rs  fuzz_pdf_parser.rs  fuzz_yaml_config.rs
libs/modkit/: Cargo.toml  README.md  build.rs  clippy.toml
libs/modkit-auth/: Cargo.toml  README.md
libs/modkit-auth/docs/: design.md  modkit-auth-client-impl.md
libs/modkit-auth/examples/: dispatcher_usage.rs  oauth2_basic.rs  oauth2_client_usage.rs  oauth2_config.rs  oauth2_invalidation.rs  oauth2_oidc_discovery.rs  oauth2_shared_token.rs
libs/modkit-auth/src/: auth_mode.rs  authorizer.rs  axum_ext.rs  claims.rs  claims_error.rs  config.rs  config_error.rs  dispatcher.rs  errors.rs  http_error.rs  jwks.rs  lib.rs  metrics.rs  plugin_traits.rs  policy_engine_builder.rs  scope_builder.rs  standard_claims.rs  traits.rs  types.rs  validation.rs
libs/modkit-auth/tests/: auth_integration.rs  integration_test.rs  keycloak_compatibility.rs  middleware_integration_test.rs  oauth2_integration.rs
libs/modkit-bootstrap/: Cargo.toml
libs/modkit-bootstrap/src/: config.rs  lib.rs  logging.rs  oop.rs  (+1 more)
libs/modkit-build/: Cargo.toml
libs/modkit-db/: Cargo.toml  README.md
libs/modkit-db-macros/: Cargo.toml  README.md
libs/modkit-errors/: Cargo.toml  README.md
libs/modkit-errors-macro/: Cargo.toml  README.md
libs/modkit-macros/: Cargo.toml  README.md
libs/modkit-node-info/: Cargo.toml  README.md
libs/modkit-odata/: Cargo.toml  README.md
libs/modkit-odata-macros/: Cargo.toml
libs/modkit-sdk/: Cargo.toml  README.md
libs/modkit-sdk-macros/: Cargo.toml  README.md
libs/modkit-security/: Cargo.toml  README.md
libs/modkit-transport-grpc/: Cargo.toml  README.md
libs/modkit-utils/: Cargo.toml  README.md
modules/api_ingress/: Cargo.toml  build.rs
modules/directory_service/: Cargo.toml  build.rs
modules/file_parser/: Cargo.toml  QUICKSTART.md  README.md
modules/grpc_hub/: Cargo.toml
(+2530 files in other folders)
