[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Hypernetix"]
repository = "https://github.com/hypernetix/hyperspot"
description = "HyperSpot Server"

[workspace]
members = [
    "apps/hyperspot-server",
    "libs/modkit-bootstrap",
    "libs/modkit",
    "libs/modkit-macros",
    "libs/modkit-db",
    "libs/modkit-db-macros",
    "libs/modkit-auth",
    "libs/modkit-security",
    "libs/modkit-errors",
    "libs/modkit-errors-macro",
    "libs/modkit-odata",
    "libs/modkit-node-info",
    "libs/modkit-transport-grpc",
    "modules/api_ingress",
    "modules/directory_service",
    "modules/grpc_hub",
    "modules/file_parser",
    "modules/nodes_registry",
    "examples/modkit/users_info"
]
resolver = "2"

# Note: dylint_lints is a separate workspace for custom linters
# See dylint_lints/README.md for usage instructions

[workspace.lints.rust]
deprecated = "deny"
unsafe_code = "forbid"
unused_mut = "warn"

[workspace.lints.clippy]
# See clippy rules details https://rust-lang.github.io/rust-clippy/master/index.html
# Here will be workspace global rules
async_yields_async = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
# cast_possible_truncation = "deny"
# cast_possible_wrap = "deny"
# cast_precision_loss = "deny"
# cast_sign_loss = "deny"
cognitive_complexity = "warn"
expect_used = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
integer_division = "deny"
lossy_float_literal = "deny"
mutex_atomic = "deny"
needless_borrow = "deny"
needless_lifetimes = "deny"
# needless_pass_by_value = "deny"
regex_creation_in_loops = "deny"
type_complexity = "warn"
unwrap_used = "deny"
unused_self = "warn"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
futures = "0.3"
async-trait = "0.1"

# High-performance data structures
dashmap = "6.1"
arc-swap = "1.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-log = "0.2"
tracing-opentelemetry = "0.32"
tracing-error = "0.2"
tracing-appender = "0.2"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"] }

# Web framework (only for api_ingress)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors", "limit", "util", "timeout"] }
uuid = { version = "1.19", features = ["serde"] }

# OpenAPI documentation (only for api_ingress)
utoipa = { version = "5.4", features = ["macros", "openapi_extensions", "chrono", "uuid"] }

# Synchronous locks for better performance
parking_lot = "0.12"

# CLI support
clap = { version = "4.5", features = ["derive"] }

# Database (only for db module)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any", "migrate"] }

# Database utilities
sea-orm = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "with-uuid", "with-chrono", "with-rust_decimal", "macros"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# File rotation for logging
file-rotate = "0.8"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# DSN parsing
dsn = "1.1.1"
humantime-serde = "1.1"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Regex for env expansion
regex = "1.10"

# gRPC support
tonic = { version = "0.14", features = ["transport"] }
prost = { version = "0.14" }
tonic-prost = "0.14"

# Protocol buffer compilation (build dependencies)
prost-build = "0.14"
tonic-prost-build = "0.14"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Cryptographic utilities
sha2 = "0.10"
hex = "0.4"

# JWT and authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

# Configuration management
figment = { version = "0.10", features = ["yaml", "env"] }
inventory = "0.3"

# File system utilities
tempfile = "3"
dirs = "6"

# Decimal handling
bigdecimal = "0.4"
rust_decimal = { version = "1.39", features = ["serde"] }
ryu = "1.0"

# System information
sysinfo = "0.37"
hostname = "0.4"
starship-battery = "0.10"
local-ip-address = "0.6"
machine-uid = "0.5"
nvml-wrapper = "0.11"

# Text processing
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
strsim = "0.11"

# OData support
odata-params = "0.4"

# Procedural macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing", "derive", "extra-traits"] }
heck = "0.5"
proc-macro-error2 = "2.0"

# Testing utilities
trybuild = "1"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "mysql"] }
httpmock = "0.8"
hyper = "1.3"

# Other utilities
rand = "0.9"
once_cell = "1.20"

# HTTP types and web utilities
http = "1.3"
matchit = "0.9"
indexmap = "2.12"

# Document and file handling
rust-embed = "8"
bytes = "1.5"
mime = "0.3"

# Document parsing libraries
tl = "0.7"
pdf-extract = "0.10"

# Additional testing utilities
tokio-test = "0.4"

# Additional utilities
nanoid = "0.4"
