[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Hypernetix"]
repository = "https://github.com/hypernetix/hyperspot"
description = "HyperSpot Server"

[workspace]
members = [
    "apps/hyperspot-server",
    "libs/modkit-bootstrap",
    "libs/modkit",
    "libs/modkit-macros",
    "libs/modkit-db",
    "libs/modkit-db-macros",
    "libs/modkit-auth",
    "libs/modkit-security",
    "libs/modkit-errors",
    "libs/modkit-errors-macro",
    "libs/modkit-odata",
    "libs/modkit-node-info",
    "libs/modkit-transport-grpc",
    "modules/api_ingress",
    "modules/directory_service",
    "modules/grpc_hub",
    "modules/file_parser",
    "modules/nodes_registry",
    "examples/modkit/users_info"
]
resolver = "2"

# Note: dylint_lints is a separate workspace for custom linters
# See dylint_lints/README.md for usage instructions

[workspace.lints.rust]
deprecated = "deny"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_mut = "warn"
noop_method_call = "warn"
unused_import_braces = "warn"

[workspace.lints.clippy]
# See clippy rules details https://rust-lang.github.io/rust-clippy/master/index.html
# Here will be workspace global rules
pedantic = { level = "deny", priority = -1 }
async_yields_async = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
# cast_possible_truncation = "deny"
# cast_possible_wrap = "deny"
# cast_precision_loss = "deny"
# cast_sign_loss = "deny"
clone_on_copy = "warn"
cognitive_complexity = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
default_trait_access = "warn"
elidable_lifetime_names = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
expect_used = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
format_push_string = "warn"
if_not_else = "warn"
ignore_without_reason = "deny"
ignored_unit_patterns = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
inefficient_to_string = "deny"
integer_division = "deny"
ip_constant = "deny"
lossy_float_literal = "deny"
manual_assert = "deny"
manual_string_new = "deny"
many_single_char_names = "deny"
map_clone = "warn"
map_unwrap_or = "deny"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mutex_atomic = "deny"
needless_borrow = "deny"
needless_lifetimes = "deny"
no_effect_underscore_binding = "deny"
non_ascii_literal = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "deny"
redundant_else = "warn"
regex_creation_in_loops = "deny"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
suspicious_operation_groupings = "warn"
trivially_copy_pass_by_ref = "deny"
type_complexity = "warn"
unchecked_duration_subtraction = "deny"
unnecessary_debug_formatting = "warn"
unnested_or_patterns = "warn"
unused_async = "deny"
unused_self = "warn"
unwrap_used = "deny"
use_debug = "warn"
used_underscore_binding = "warn"
used_underscore_items = "deny"
useless_let_if_seq = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"

# =============================================================================
# PEDANTIC LINTS - Temporarily allowed until fixed
# After fixing each lint, change "allow" to "warn" or "deny" as appropriate or remove the lint from the list
# =============================================================================

# Documentation lints (648 total)
doc_markdown = "allow"                        # 511 - backticks missing in docs
missing_errors_doc = "allow"                  # 126 - missing # Errors section
doc_link_with_quotes = "allow"                # 5 - use backticks instead of quotes
missing_panics_doc = "allow"                  # 4 - missing # Panics section
missing_fields_in_debug = "allow"             # 2 - Debug impl missing fields

# Style lints (436 total)
uninlined_format_args = "allow"               # 302 - use format!("{x}") instead of format!("{}", x)
redundant_closure_for_method_calls = "allow"  # 57 - use method reference instead of closure
single_match_else = "allow"                   # 23 - use if let instead of match
items_after_statements = "allow"              # 15 - items should be before statements
unreadable_literal = "allow"                  # 14 - use underscores in large numbers
explicit_iter_loop = "allow"                  # 10 - use for x in &collection
enum_glob_use = "allow"                       # 8 - avoid use Enum::*
manual_let_else = "allow"                     # 7 - use let else pattern

# API Design lints (359 total)
must_use_candidate = "allow"                  # 221 - add #[must_use] to pure functions
return_self_not_must_use = "allow"            # 95 - builder methods should have #[must_use]
needless_pass_by_value = "allow"              # 19 - take reference instead of value
unnecessary_wraps = "allow"                   # 15 - Result that never errors
unnecessary_literal_bound = "allow"           # 6 - unnecessary lifetime bound
ref_option = "allow"                          # 3 - use Option<&T> instead of &Option<T>

# Cast lints - CRITICAL (21 total) ⚠️
cast_possible_truncation = "allow"            # 9 - may truncate value
cast_sign_loss = "allow"                      # 4 - casting to unsigned loses sign
cast_precision_loss = "allow"                 # 6 - casting float loses precision
cast_possible_wrap = "allow"                  # 2 - casting may wrap around

# Complexity lints (23 total)
too_many_lines = "allow"                      # 11 - function too long
similar_names = "allow"                       # 9 - variable names too similar
struct_excessive_bools = "allow"              # 3 - too many bools in struct

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
futures = "0.3"
async-trait = "0.1"

# High-performance data structures
dashmap = "6.1"
arc-swap = "1.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-log = "0.2"
tracing-opentelemetry = "0.32"
tracing-error = "0.2"
tracing-appender = "0.2"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"] }

# Web framework (only for api_ingress)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors", "limit", "util", "timeout"] }
uuid = { version = "1.19", features = ["serde"] }

# OpenAPI documentation (only for api_ingress)
utoipa = { version = "5.4", features = ["macros", "openapi_extensions", "chrono", "uuid"] }

# Synchronous locks for better performance
parking_lot = "0.12"

# CLI support
clap = { version = "4.5", features = ["derive"] }

# Database (only for db module)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any", "migrate"] }

# Database utilities
sea-orm = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "with-uuid", "with-chrono", "with-rust_decimal", "macros"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# File rotation for logging
file-rotate = "0.8"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# DSN parsing
dsn = "1.1.1"
humantime-serde = "1.1"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Regex for env expansion
regex = "1.10"

# gRPC support
tonic = { version = "0.14", features = ["transport"] }
prost = { version = "0.14" }
tonic-prost = "0.14"

# Protocol buffer compilation (build dependencies)
prost-build = "0.14"
tonic-prost-build = "0.14"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Time handling
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Cryptographic utilities
sha2 = "0.10"
hex = "0.4"

# JWT and authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

# Configuration management
figment = { version = "0.10", features = ["yaml", "env"] }
inventory = "0.3"

# File system utilities
tempfile = "3"
dirs = "6"

# Decimal handling
bigdecimal = "0.4"
rust_decimal = { version = "1.39", features = ["serde"] }
ryu = "1.0"

# System information
sysinfo = "0.37"
hostname = "0.4"
starship-battery = "0.10"
local-ip-address = "0.6"
machine-uid = "0.5"
nvml-wrapper = "0.11"

# Text processing
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
strsim = "0.11"

# OData support
odata-params = "0.4"

# Procedural macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing", "derive", "extra-traits"] }
heck = "0.5"
proc-macro-error2 = "2.0"

# Testing utilities
trybuild = "1"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "mysql"] }
httpmock = "0.8"
hyper = "1.3"

# Other utilities
rand = "0.9"
once_cell = "1.20"

# HTTP types and web utilities
http = "1.3"
matchit = "0.9"
indexmap = "2.12"

# Document and file handling
rust-embed = "8"
bytes = "1.5"
mime = "0.3"

# Document parsing libraries
tl = "0.7"
pdf-extract = "0.10"

# Additional testing utilities
tokio-test = "0.4"

# Additional utilities
nanoid = "0.4"
