[workspace]
members = [
    "lint_utils",
    "de01_contract_layer/de0101_no_serde_in_contract",
    "de01_contract_layer/de0102_no_toschema_in_contract",
    "de01_contract_layer/de0103_no_http_types_in_contract",
    "de02_api_layer/de0201_dtos_only_in_api_rest",
    "de02_api_layer/de0202_dtos_not_referenced_outside_api",
    "de02_api_layer/de0203_dtos_must_have_serde_derives",
    "de02_api_layer/de0204_dtos_must_have_toschema_derive",
    "de08_rest_api_conventions/de0801_api_endpoint_version",
]
exclude = ["contract_lints"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Hypernetix"]

# This workspace contains dylint linter crates
# Each linter will be added as a member as it's implemented
#
# Current linters:
# - contract_lints: DE0101, DE0102, DE0103 (contract layer validation)

[workspace.lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
