[workspace]
members = [
    "lint_utils",
    "de01_contract_layer/de0101_no_serde_in_contract",
    "de01_contract_layer/de0102_no_toschema_in_contract",
    "de01_contract_layer/de0103_no_http_types_in_contract",
    "de02_api_layer/de0201_dtos_only_in_api_rest",
    "de02_api_layer/de0202_dtos_not_referenced_outside_api",
    "de02_api_layer/de0203_dtos_must_have_serde_derives",
    "de02_api_layer/de0204_dtos_must_have_toschema_derive",
    "de03_domain_layer/de0301_no_infra_in_domain",
    "de03_domain_layer/de0305_no_panics_in_domain",
    "de03_domain_layer/de0308_no_http_in_domain",
    "de04_infrastructure/de0407_no_hardcoded_connection_strings",
    "de04_infrastructure/de0409_no_secrets_in_migrations",
    "de05_client_layer/de0503_plugin_client_suffix",
    "de07_security/de0701_no_unwrap",
    "de07_security/de0702_no_expect",
    "de07_security/de0703_no_hardcoded_secrets",
    "de07_security/de0705_no_prebuild_sql_queries",
    "de07_security/de0705_no_sql_injection",
    "de07_security/de0706_no_direct_sqlx",
    "de08_rest_api_conventions/de0801_api_endpoint_version",
    "de08_rest_api_conventions/de0802_use_odata_ext",
    "de09_gts_layer/de0901_gts_string_pattern",
    "de09_gts_layer/de0902_no_schema_for_on_gts_structs",
    "de11_documentation/de1107_public_apis_doc_comments",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Hypernetix"]

# This workspace contains dylint linter crates
# Each linter will be added as a member as it's implemented
#
# Current linters:
# - contract_lints: DE0101, DE0102, DE0103, DE0110 (contract layer validation)

[workspace.lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "warn"

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "20ce69b9a63bcd2756cd906fe0964d1e901e042a" }
dylint_linting = "5.0.0"
dylint_testing = "5.0.0"
lint_utils = { path = "lint_utils" }
# NOTE: Keep gts version in sync with /Cargo.toml workspace dependencies
gts = { git = "https://github.com/globaltypesystem/gts-rust.git", tag = "v0.7.7" }
gts-macros = { git = "https://github.com/globaltypesystem/gts-rust.git", tag = "v0.7.7" }

# Dev dependencies for lint tests
sea-orm = "1.0"
sqlx = "0.8"
axum = "0.7"
uuid = "1.0"
anyhow = "1.0"
thiserror = "2.0"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
