[package]
name = "hyperspot-server"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
users-info-example = ["dep:users_info"]
oop-example = ["dep:calculator_gateway", "dep:calculator"]
tenant-resolver-example = [
    "dep:tenant_resolver_example_gw",
    "dep:contoso_tr_plugin",
    "dep:fabrikam_tr_plugin",
]
single-tenant = ["dep:single-tenant-tr-plugin"]
static-tenants = ["dep:static-tr-plugin"]
otel = ["modkit/otel"]

[[bin]]
name = "hyperspot-server"
path = "src/main.rs"

[dependencies]
mimalloc = { version = "0.1" }
# Local crates
modkit = { workspace = true, features = ["otel", "bootstrap"] }
modkit-db = { workspace = true, features = ["sqlite", "pg"] }

# System modules
api_gateway = { package = "cf-api-gateway", path = "../../modules/system/api_gateway" }
grpc_hub = { package = "cf-grpc-hub", path = "../../modules/system/grpc_hub" }
module_orchestrator = { package = "cf-module-orchestrator", path = "../../modules/system/module_orchestrator" }
types-registry = { package = "cf-types-registry", path = "../../modules/system/types-registry/types-registry" }
tenant-resolver-gw = { package = "cf-tenant-resolver-gw", path = "../../modules/system/tenant_resolver/tenant_resolver-gw" }

# Optional tenant resolver plugins
single-tenant-tr-plugin = { package = "cf-single-tenant-tr-plugin", path = "../../modules/system/tenant_resolver/plugins/single_tenant_tr_plugin", optional = true }
static-tr-plugin = { package = "cf-static-tr-plugin", path = "../../modules/system/tenant_resolver/plugins/static_tr_plugin", optional = true }

# user modules
file_parser = { package = "cf-file-parser", path = "../../modules/file_parser" }
nodes_registry = { package = "cf-nodes-registry", path = "../../modules/system/nodes_registry/nodes_registry" }
simple-user-settings = { package = "cf-simple-user-settings", path = "../../modules/simple-user-settings/simple-user-settings" }

anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true, features = ["yaml", "env"] }
uuid = { workspace = true }

# Optional example module
users_info = { path = "../../examples/modkit/users_info/users_info", optional = true }
calculator_gateway = { path = "../../examples/oop-modules/calculator_gateway/calculator_gateway", optional = true }
calculator = { path = "../../examples/oop-modules/calculator/calculator", optional = true }

# tenant_resolver plugin example
tenant_resolver_example_gw = { package = "tenant_resolver-gw", path = "../../examples/plugin-modules/tenant_resolver/tenant_resolver-gw", optional = true }
contoso_tr_plugin = { path = "../../examples/plugin-modules/tenant_resolver/plugins/contoso_tr_plugin", optional = true }
fabrikam_tr_plugin = { path = "../../examples/plugin-modules/tenant_resolver/plugins/fabrikam_tr_plugin", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde-saphyr = { workspace = true }
