[package]
name = "contract_lints"
version = "0.1.0"
authors = ["Hypernetix"]
description = "Dylint linters for Hyperspot contract layer validation (DE0101, DE0102, DE0103)"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Using dylint_linting without clippy_utils to avoid version compatibility issues
dylint_linting = "4.0"

[dev-dependencies]
dylint_testing = "4.0"

[package.metadata.rust-analyzer]
rustc_private = true

[package.metadata.dylint]
# Lints provided by this crate:
# - DE0101_NO_SERDE_IN_CONTRACT (DE0101)
# - DE0102_NO_TOSCHEMA_IN_CONTRACT (DE0102)
# - DE0103_NO_HTTP_TYPES_IN_CONTRACT (DE0103)
