[package]
name = "lint_utils"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
test = false

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "20ce69b9a63bcd2756cd906fe0964d1e901e042a" }
dylint_linting = "5.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
