[package]
name = "cf-modkit-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit authentication library"
keywords = ["cyberfabric", "cyberfabric-modkit"]

[lib]
name = "modkit_auth"

[lints]
workspace = true

[[example]]
name = "dispatcher_usage"
path = "examples/dispatcher_usage.rs"

[dependencies]
# Core dependencies
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "rustls-tls",
], default-features = false }
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
http = { workspace = true, optional = true }
modkit-security = { workspace = true }

[features]
default = ["axum-ext"]
axum-ext = ["axum", "tower", "http"]
